--- a/qqbot.html
+++ b/qqbot.html
@@ -456,7 +456,7 @@
             </div>
         </section>
 
-        <section class="doc-section" id="features">
+        <section class="doc-section" id="whattodo">
             <h2>✨ 接下来的工作</h2>
             <div class="feature-list">
                 <div class="feature-card">
