--- a/qqbot.html
+++ b/qqbot.html
@@ -451,7 +451,12 @@
                         </tbody>
                     </table>
                 </div>
+                <br>
+                <div class="feature-card">
+                    <p>对于pixiv的标签，可以参考这个。简言之就是想要热门就敲几个0<a
+                            href="https://ngabbs.com/read.php?tid=35394190&rand=443">链接</a></p>
 
+                </div>
                 <!-- 其他命令卡片... -->
             </div>
         </section>
