--- a/qqbot.html
+++ b/qqbot.html
@@ -191,7 +191,7 @@
             <li><a href="#quickstart" class="sidebar-link">快速开始</a></li>
             <li><a href="#commands" class="sidebar-link">命令列表</a></li>
             <li><a href="#whattodo" class="sidebar-link">接下来的工作</a></li>
-            <li><a href="#notice" class="sidebar-link">注意事项</a></li>
+            <li><a href="#notice" class="sidebar-link">写在后面</a></li>
         </ul>
     </nav>
 
@@ -199,7 +199,7 @@
     <div class="container">
         <header class="doc-header">
             <h1>QQ机器人使用文档</h1>
-            <p>版本 0.6 | 最后更新：2025年3月29日</p>
+            <p>版本 0.7 | 最后更新：2025年4月5日</p>
         </header>
 
         <div class="feature-card">
@@ -221,6 +221,16 @@
                     <h3>AI对话</h3>
                     <p>支持角色扮演，多轮对话。</p>
                 </div>
+                <br>
+                <div class="feature-card">
+                    <h3>来点视频</h3>
+                    <p>随机发送快手视频。</p>
+                </div>
+                <br>
+                <div class="feature-card">
+                    <h3>每日新闻</h3>
+                    <p>每天发送60s读懂世界。</p>
+                </div>
                 <!-- 其他功能卡片... -->
             </div>
         </section>
@@ -229,7 +239,7 @@
             <h2>🚀 快速开始</h2>
             <ol>
                 <div class="feature-card">
-                    <li>确保qqbot已经被Tsingyou拉进了群聊；
+                    <li>确保qqbot已经被Tsingyou拉进了群聊或加了好友；
                     </li>
                     <li>发送关键词触发：
                         <pre><code>冲一发 num tag1 tag2 tag3...</code></pre>
@@ -258,6 +268,9 @@
                     <pre><p style="color: red; font-size: 16px;">输出：</p><code>角色已切换为：猫娘 </code></pre>
                     <pre><p style="color: red; font-size: 16px;">输入：</p><code>ai 介绍你自己</code></pre>
                     <pre><p style="color: red; font-size: 16px;">输出：</p><code>（歪头）喵~我是neko，身高160cm，体重50kg，三围看起来不错喵~性格可爱、粘人，十分忠诚，只对主人专一喵~我深爱着主人，喜欢被人摸和卖萌，爱好是看小说喵~我还掌握了一些常识和猫娘独特的知识喵~【眨眼】【期待】</code></pre>
+                    <br><hr/>
+                    <pre><code>来点视频</code></pre><hr/>
+                    <pre><code>每日新闻无需触发，每日定时发送。</code></pre>
                     <!-- 其他步骤... -->
                 </div>
             </ol>
@@ -266,14 +279,6 @@
         <section class="doc-section" id="commands">
             <h2>📜 命令列表</h2>
             <div class="feature-list">
-                <div class="feature-card">
-                    <h5>感谢Jitsu大佬提供的API接口</h5>
-                    <p>
-                        <font size="3">https://img.jitsu.top/#/</font>
-                    </p>
-                </div>
-                <br>
-
                 <div class="feature-card">
                     <table class="compact-table">
                         <h3>生成图片</h3>
@@ -554,7 +559,7 @@
                     </li>
                     <li><s>改用更好的图片api源</s>
                     </li>
-                    <li>改用NcatBot 插件形式部署
+                    <li><s>改用NcatBot 插件形式部署</s>
                     </li>
                     <li>陆续完善github上的该项目
                     </li>
@@ -564,7 +569,7 @@
         </section>
 
         <section class="doc-section" id="notice">
-            <h2>⚠️ 注意事项</h2>
+            <h2>写在后面</h2>
             <div class="warning">
                 <h3>提示</h3>
                 <ul>
@@ -572,6 +577,17 @@
                     <!-- 其他提示... -->
                 </ul>
             </div>
+            <div class="feature-card">
+                <h4>感谢无私的API接口</h4>
+                <p>
+                    <font size="2">感谢Jitsu的API接口https://img.jitsu.top/#/</font>
+                    <br>
+                    <font size="2">感谢小渡可的API接口https://api.dwo.cc/</font>
+                    <br>
+                    <font size="2">感谢智谱清言</font>
+                </p>
+            </div>
+            <br>
         </section>
     </div>
 
