--- a/qqbot.html
+++ b/qqbot.html
@@ -192,6 +192,7 @@
             <li><a href="#commands" class="sidebar-link">命令列表</a></li>
             <li><a href="#whattodo" class="sidebar-link">接下来的工作</a></li>
             <li><a href="#notice" class="sidebar-link">写在后面</a></li>
+            <li><a href="https://tsing-you.github.io/history.html" class="sidebar-link">改进日志</a></li>
         </ul>
     </nav>
 
