--- a/history.html
+++ b/history.html
@@ -161,8 +161,31 @@
     <div class="container">
         <header class="doc-header">
             <h1>改进日志</h1>
-            <p>版本 0.7 | 最后更新：2025年4月5日</p>
+            <p>版本 0.8 | 最后更新：2025年4月6日</p>
         </header>
+
+        <section class="doc-section">
+            <h2>✨ 版本历史</h2>
+            <!-- 版本卡片 -->
+            <div class="version-card">
+                <div class="version-header">
+                    <h3 class="version-date">2025-04-06</h3>
+                    <!-- <div class="version-actions">
+                        <a href="#v0.7.1">查看详情</a>
+                    </div> -->
+                </div>
+                <div class="version-content">
+                    <h4>新增功能</h4>
+                    <ul>
+                        <li>定时发送图片视频</li>
+                        <li>新增三次元图片</li>
+                    </ul>
+                    <h4>修复问题</h4>
+                    <ul>
+                        <li>修复群聊功能异常</li>
+                    </ul>
+                </div>
+            </div>
 
         <section class="doc-section">
             <h2>✨ 版本历史</h2>
