--- a/history.html
+++ b/history.html
@@ -161,11 +161,31 @@
     <div class="container">
         <header class="doc-header">
             <h1>改进日志</h1>
-            <p>版本 0.8 | 最后更新：2025年4月6日</p>
+            <p>版本 0.9 | 最后更新：2025年5月8日</p>
         </header>
 
         <section class="doc-section">
             <h2>✨ 版本历史</h2>
+            <!-- 版本卡片 -->
+            <div class="version-card">
+                <div class="version-header">
+                    <h3 class="version-date">2025-05-08</h3>
+                    <!-- <div class="version-actions">
+                        <a href="#v0.7.1">查看详情</a>
+                    </div> -->
+                </div>
+                <div class="version-content">
+                    <h4>新增功能</h4>
+                    <ul>
+                        <li>冲否</li>
+                    </ul>
+                    <h4>改进功能</h4>
+                    <ul>
+                        <li>ai对话改为为开关式</li>
+                    </ul>
+                </div>
+            </div>
+
             <!-- 版本卡片 -->
             <div class="version-card">
                 <div class="version-header">
@@ -187,8 +207,6 @@
                 </div>
             </div>
 
-        <section class="doc-section">
-            <h2>✨ 版本历史</h2>
             <!-- 版本卡片 -->
             <div class="version-card">
                 <div class="version-header">
